--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "axios": "^1.7.2",
     "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
-    "ionicons": "^7.4.0",
     "locomotive-scroll": "^4.1.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -23,7 +22,7 @@
     "react-icons": "^5.2.1",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
-    "swiper": "^11.1.4"
+    "react-scroll-to-top": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
