--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
+    "keen-slider": "^6.8.6",
     "locomotive-scroll": "^4.1.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -22,7 +23,9 @@
     "react-icons": "^5.2.1",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
-    "react-scroll-to-top": "^3.0.0"
+    "react-scroll-to-top": "^3.0.0",
+    "react-use-gesture": "^9.1.3",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
