--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@react-spring/web": "^9.7.3",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
@@ -24,6 +25,7 @@
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "react-scroll-to-top": "^3.0.0",
+    "react-spring": "^9.7.3",
     "react-use-gesture": "^9.1.3",
     "swiper": "^11.1.4"
   },
