--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@material-tailwind/react": "^2.1.9",
     "@react-spring/web": "^9.7.3",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.10",
