--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.23.1",
     "react-scroll-to-top": "^3.0.0",
     "react-spring": "^9.7.3",
+    "react-transition-group": "^4.4.5",
     "react-use-gesture": "^9.1.3",
     "swiper": "^11.1.4"
   },
