--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/material": "^5.15.20",
     "@react-spring/web": "^9.7.3",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
     "keen-slider": "^6.8.6",
     "locomotive-scroll": "^4.1.4",
+    "mui": "^0.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
