--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "react-scroll-to-top": "^3.0.0",
     "react-spring": "^9.7.3",
-    "react-transition-group": "^4.4.5",
-    "react-use-gesture": "^9.1.3",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
